compiler/fir/analysis-tests/testData/resolve/unionTypeInSuperClasses.kt
interface A
interface B
open class C

class D : <!UNION_TYPE_PROHIBITED_POSITION!>A | B<!>, C()
